--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -31,11 +31,13 @@
   width: 70%;
   height: 100%;
   max-width: 700px;
+  min-width: 250px;
 }
 .slider-container1 {
-  margin-top: 4%;
+  margin-top: 5%;
   width: 70%;
   height: 100%;
+  min-width: 200px;
   max-width: 300px;
   display: none;
 }
