--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -35,16 +35,26 @@
 }
 .slider-container1 {
   margin-top: 5%;
-  width: 70%;
+  width: 100%;
+  min-height: 300px;
   height: 100%;
   min-width: 200px;
   max-width: 300px;
   display: none;
 }
+.footer {
+  margin-left: 40%;
+}
+
 @media screen and (max-width: 768px) {
   .home-sub-container {
     flex-direction: column;
     align-items: flex-start;
+  }
+  .data-container {
+    height: 100%;
+    width: 100%;
+    min-height: 300px;
   }
   .slider-container {
     display: none;
@@ -53,7 +63,7 @@
     display: block;
     margin: auto;
   }
-}
-.footer {
-  margin-left: 40%;
+  .footer {
+    margin-left: 32%;
+  }
 }
