--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -15,7 +15,7 @@
 .sub-header-container {
   display: flex;
   flex-direction: row;
-  width: 300px;
+  width: 350px;
   align-items: center;
   justify-content: space-around;
 }
@@ -29,10 +29,20 @@
   padding: 5px;
   border-width: 0px;
   border-radius: 10px;
-  background-color: rgb(195, 7, 195);
+  background-color: rgb(153, 52, 52);
 }
 .header-popup {
   display: none;
+}
+.cart-color {
+  color: rgb(195, 7, 195);
+  height: 28px;
+  width: 28px;
+}
+.cart-one {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 @media screen and (max-width: 768px) {
   .sub-header-container {
@@ -50,6 +60,11 @@
   .logout-button {
     margin: 5px;
     background-color: l;
+  }
+  .cart-color {
+    color: white;
+    height: 25px;
+    width: 25px;
   }
 }
 .popup-button {
